--- a/index.html
+++ b/index.html
@@ -8231,15 +8231,65 @@ var _elm_lang$html$Html_Events$Options = F2(
 	function (a, b) {
 		return {stopPropagation: a, preventDefault: b};
 	});
+var _user$project$Tree$toHtml = F2(
+	function (func, tree) {
+		var _p0 = tree;
+		if (_p0.ctor === 'Element') {
+			return func(_p0._0);
+		} else {
+			return A2(
+				_elm_lang$html$Html$div,
+				{ctor: '[]'},
+				{
+					ctor: '::',
+					_0: func(_p0._0),
+					_1: {
+						ctor: '::',
+						_0: A2(
+							_elm_lang$html$Html$div,
+							{ctor: '[]'},
+							A2(
+								_elm_lang$core$List$map,
+								_user$project$Tree$toHtml(func),
+								_p0._1)),
+						_1: {ctor: '[]'}
+					}
+				});
+		}
+	});
+var _user$project$Tree$flattenWithDepth = F2(
+	function (depth, tree) {
+		var _p1 = tree;
+		if (_p1.ctor === 'Element') {
+			return {
+				ctor: '::',
+				_0: {ctor: '_Tuple2', _0: _p1._0, _1: depth},
+				_1: {ctor: '[]'}
+			};
+		} else {
+			return {
+				ctor: '::',
+				_0: {ctor: '_Tuple2', _0: _p1._0, _1: depth},
+				_1: A2(
+					_elm_lang$core$List$concatMap,
+					_user$project$Tree$flattenWithDepth(depth + 1),
+					_p1._1)
+			};
+		}
+	});
 var _user$project$Tree$flatten = function (tree) {
-	var _p0 = tree;
-	if (_p0.ctor === 'Empty') {
-		return {ctor: '[]'};
+	var _p2 = tree;
+	if (_p2.ctor === 'Element') {
+		return {
+			ctor: '::',
+			_0: _p2._0,
+			_1: {ctor: '[]'}
+		};
 	} else {
 		return {
 			ctor: '::',
-			_0: _p0._0,
-			_1: A2(_elm_lang$core$List$concatMap, _user$project$Tree$flatten, _p0._1)
+			_0: _p2._0,
+			_1: A2(_elm_lang$core$List$concatMap, _user$project$Tree$flatten, _p2._1)
 		};
 	}
 };
@@ -8247,62 +8297,72 @@ var _user$project$Tree$count = function (tree) {
 	return _elm_lang$core$List$length(
 		_user$project$Tree$flatten(tree));
 };
-var _user$project$Tree$NodeItem = F2(
-	function (a, b) {
-		return {id: a, textColor: b};
+var _user$project$Tree$NodeItem = F5(
+	function (a, b, c, d, e) {
+		return {id: a, textColor: b, padding: c, backColor: d, border: e};
 	});
 var _user$project$Tree$Node = F2(
 	function (a, b) {
 		return {ctor: 'Node', _0: a, _1: b};
 	});
-var _user$project$Tree$Empty = {ctor: 'Empty'};
+var _user$project$Tree$Element = function (a) {
+	return {ctor: 'Element', _0: a};
+};
 var _user$project$Tree$insert = F3(
 	function (position, newNodeItem, tree) {
-		var newNode = A2(
-			_user$project$Tree$Node,
-			newNodeItem,
-			{
-				ctor: '::',
-				_0: _user$project$Tree$Empty,
-				_1: {ctor: '[]'}
-			});
-		var _p1 = tree;
-		if (_p1.ctor === 'Empty') {
-			return newNode;
+		var _p3 = tree;
+		if (_p3.ctor === 'Element') {
+			var _p4 = _p3._0;
+			return _elm_lang$core$Native_Utils.eq(_p4.id, position) ? A2(
+				_user$project$Tree$Node,
+				_p4,
+				{
+					ctor: '::',
+					_0: _user$project$Tree$Element(newNodeItem),
+					_1: {ctor: '[]'}
+				}) : _user$project$Tree$Element(_p4);
 		} else {
-			var _p3 = _p1._1;
-			var _p2 = _p1._0;
-			return _elm_lang$core$Native_Utils.eq(_p2.id, position) ? A2(
+			var _p6 = _p3._1;
+			var _p5 = _p3._0;
+			return _elm_lang$core$Native_Utils.eq(_p5.id, position) ? A2(
 				_user$project$Tree$Node,
-				_p2,
-				{ctor: '::', _0: newNode, _1: _p3}) : A2(
+				_p5,
+				{
+					ctor: '::',
+					_0: _user$project$Tree$Element(newNodeItem),
+					_1: A2(
+						_elm_lang$core$List$map,
+						A2(_user$project$Tree$insert, position, newNodeItem),
+						_p6)
+				}) : A2(
 				_user$project$Tree$Node,
-				_p2,
+				_p5,
 				A2(
 					_elm_lang$core$List$map,
 					A2(_user$project$Tree$insert, position, newNodeItem),
-					_p3));
+					_p6));
 		}
 	});
 var _user$project$Tree$map = F2(
 	function (func, tree) {
-		var _p4 = tree;
-		if (_p4.ctor === 'Empty') {
-			return _user$project$Tree$Empty;
+		var _p7 = tree;
+		if (_p7.ctor === 'Element') {
+			return _user$project$Tree$Element(
+				func(_p7._0));
 		} else {
 			return A2(
 				_user$project$Tree$Node,
-				func(_p4._0),
+				func(_p7._0),
 				A2(
 					_elm_lang$core$List$map,
 					_user$project$Tree$map(func),
-					_p4._1));
+					_p7._1));
 		}
 	});
 var _user$project$Tree$maybeFind = F2(
 	function (maybeInt, tree) {
-		var _p5 = maybeInt;
-		if (_p5.ctor === 'Just') {
+		var _p8 = maybeInt;
+		if (_p8.ctor === 'Just') {
 			return _elm_lang$core$List$head(
 				A2(
 					_elm_lang$core$List$filterMap,
@@ -8311,7 +8371,7 @@ var _user$project$Tree$maybeFind = F2(
 						A2(
 							_user$project$Tree$map,
 							function (t) {
-								return _elm_lang$core$Native_Utils.eq(t.id, _p5._0) ? _elm_lang$core$Maybe$Just(t) : _elm_lang$core$Maybe$Nothing;
+								return _elm_lang$core$Native_Utils.eq(t.id, _p8._0) ? _elm_lang$core$Maybe$Just(t) : _elm_lang$core$Maybe$Nothing;
 							},
 							tree))));
 		} else {
@@ -8328,7 +8388,7 @@ var _user$project$Tree$update = F2(
 			tree);
 	});
 var _user$project$Main$defaultNode = function (id) {
-	return {id: id, textColor: 'black'};
+	return {id: id, textColor: 'black', padding: '50px', backColor: 'white', border: '1px solid black'};
 };
 var _user$project$Main$testNode = A2(
 	_user$project$Tree$Node,
@@ -8340,24 +8400,18 @@ var _user$project$Main$testNode = A2(
 			_user$project$Main$defaultNode(1),
 			{
 				ctor: '::',
-				_0: A2(
-					_user$project$Tree$Node,
-					_user$project$Main$defaultNode(2),
-					{ctor: '[]'}),
+				_0: _user$project$Tree$Element(
+					_user$project$Main$defaultNode(2)),
 				_1: {ctor: '[]'}
 			}),
 		_1: {
 			ctor: '::',
-			_0: A2(
-				_user$project$Tree$Node,
-				_user$project$Main$defaultNode(3),
-				{ctor: '[]'}),
+			_0: _user$project$Tree$Element(
+				_user$project$Main$defaultNode(3)),
 			_1: {
 				ctor: '::',
-				_0: A2(
-					_user$project$Tree$Node,
-					_user$project$Main$defaultNode(4),
-					{ctor: '[]'}),
+				_0: _user$project$Tree$Element(
+					_user$project$Main$defaultNode(4)),
 				_1: {ctor: '[]'}
 			}
 		}
@@ -8366,6 +8420,16 @@ var _user$project$Main$url = 'https://upload.wikimedia.org/wikipedia/commons/f/f
 var _user$project$Main$emptyModel = {dropNode: _elm_lang$core$Maybe$Nothing, dragNode: _elm_lang$core$Maybe$Nothing, selectedNode: _elm_lang$core$Maybe$Nothing, tree: _user$project$Main$testNode};
 var _user$project$Main$update = F2(
 	function (msg, model) {
+		var updateNested = function (newItem) {
+			return A2(
+				_elm_lang$core$Platform_Cmd_ops['!'],
+				_elm_lang$core$Native_Utils.update(
+					model,
+					{
+						tree: A2(_user$project$Tree$update, newItem, model.tree)
+					}),
+				{ctor: '[]'});
+		};
 		var _p0 = msg;
 		switch (_p0.ctor) {
 			case 'DragStart':
@@ -8425,82 +8489,84 @@ var _user$project$Main$update = F2(
 							selectedNode: _elm_lang$core$Maybe$Just(_p0._0.id)
 						}),
 					{ctor: '[]'});
-			default:
-				var tree = A2(
-					_user$project$Tree$update,
+			case 'UpdateTextColor':
+				return updateNested(
 					_elm_lang$core$Native_Utils.update(
 						_p0._0,
-						{textColor: _p0._1}),
-					model.tree);
-				return A2(
-					_elm_lang$core$Platform_Cmd_ops['!'],
+						{textColor: _p0._1}));
+			case 'UpdatePadding':
+				return updateNested(
 					_elm_lang$core$Native_Utils.update(
-						model,
-						{tree: tree}),
-					{ctor: '[]'});
+						_p0._0,
+						{padding: _p0._1}));
+			case 'UpdateBackColor':
+				return updateNested(
+					_elm_lang$core$Native_Utils.update(
+						_p0._0,
+						{backColor: _p0._1}));
+			default:
+				return updateNested(
+					_elm_lang$core$Native_Utils.update(
+						_p0._0,
+						{border: _p0._1}));
 		}
 	});
-var _user$project$Main$viewMiniTree = F2(
-	function (dashes, tree) {
-		var _p1 = tree;
-		if (_p1.ctor === 'Empty') {
-			return A2(
-				_elm_lang$html$Html$div,
-				{ctor: '[]'},
-				{ctor: '[]'});
-		} else {
-			var newDiv = A2(
-				_elm_lang$html$Html$div,
-				{ctor: '[]'},
-				{
-					ctor: '::',
-					_0: _elm_lang$html$Html$text(
-						A2(
-							_elm_lang$core$Basics_ops['++'],
-							dashes,
-							_elm_lang$core$Basics$toString(_p1._0.id))),
-					_1: {ctor: '[]'}
-				});
-			return A2(
-				_elm_lang$html$Html$div,
-				{ctor: '[]'},
-				{
-					ctor: '::',
-					_0: newDiv,
-					_1: A2(
-						_elm_lang$core$List$map,
-						_user$project$Main$viewMiniTree(
-							A2(_elm_lang$core$Basics_ops['++'], dashes, '--')),
-						_p1._1)
-				});
-		}
-	});
+var _user$project$Main$viewMiniTree = function (_p1) {
+	var _p2 = _p1;
+	return A2(
+		_elm_lang$html$Html$div,
+		{ctor: '[]'},
+		{
+			ctor: '::',
+			_0: _elm_lang$html$Html$text(
+				A2(
+					_elm_lang$core$Basics_ops['++'],
+					A2(_elm_lang$core$String$repeat, _p2._1, '--'),
+					_elm_lang$core$Basics$toString(_p2._0.id))),
+			_1: {ctor: '[]'}
+		});
+};
 var _user$project$Main$init = {ctor: '_Tuple2', _0: _user$project$Main$emptyModel, _1: _elm_lang$core$Platform_Cmd$none};
 var _user$project$Main$Model = F4(
 	function (a, b, c, d) {
 		return {dragNode: a, dropNode: b, selectedNode: c, tree: d};
+	});
+var _user$project$Main$UpdateBorder = F2(
+	function (a, b) {
+		return {ctor: 'UpdateBorder', _0: a, _1: b};
+	});
+var _user$project$Main$UpdateBackColor = F2(
+	function (a, b) {
+		return {ctor: 'UpdateBackColor', _0: a, _1: b};
+	});
+var _user$project$Main$UpdatePadding = F2(
+	function (a, b) {
+		return {ctor: 'UpdatePadding', _0: a, _1: b};
 	});
 var _user$project$Main$UpdateTextColor = F2(
 	function (a, b) {
 		return {ctor: 'UpdateTextColor', _0: a, _1: b};
 	});
 var _user$project$Main$viewSelectedItem = function (model) {
-	var _p2 = A2(_user$project$Tree$maybeFind, model.selectedNode, model.tree);
-	if (_p2.ctor === 'Just') {
-		var _p3 = _p2._0;
-		var selectedText = A2(
-			_elm_lang$html$Html$input,
-			{
-				ctor: '::',
-				_0: _elm_lang$html$Html_Attributes$value(_p3.textColor),
-				_1: {
-					ctor: '::',
-					_0: _elm_lang$html$Html_Events$onInput(
-						_user$project$Main$UpdateTextColor(_p3)),
-					_1: {ctor: '[]'}
-				}
-			},
-			{ctor: '[]'});
+	var _p3 = A2(_user$project$Tree$maybeFind, model.selectedNode, model.tree);
+	if (_p3.ctor === 'Just') {
+		var _p4 = _p3._0;
+		var defaultInput = F2(
+			function (val, event) {
+				return A2(
+					_elm_lang$html$Html$input,
+					{
+						ctor: '::',
+						_0: _elm_lang$html$Html_Attributes$value(val),
+						_1: {
+							ctor: '::',
+							_0: _elm_lang$html$Html_Events$onInput(
+								event(_p4)),
+							_1: {ctor: '[]'}
+						}
+					},
+					{ctor: '[]'});
+			});
 		var selectStyle = _elm_lang$html$Html_Attributes$style(
 			{
 				ctor: '::',
@@ -8533,7 +8599,7 @@ var _user$project$Main$viewSelectedItem = function (model) {
 							A2(
 								_elm_lang$core$Basics_ops['++'],
 								'Id: ',
-								_elm_lang$core$Basics$toString(_p3.id))),
+								_elm_lang$core$Basics$toString(_p4.id))),
 						_1: {ctor: '[]'}
 					}),
 				_1: {
@@ -8546,11 +8612,56 @@ var _user$project$Main$viewSelectedItem = function (model) {
 							_0: _elm_lang$html$Html$text('Text color: '),
 							_1: {
 								ctor: '::',
-								_0: selectedText,
+								_0: A2(defaultInput, _p4.textColor, _user$project$Main$UpdateTextColor),
 								_1: {ctor: '[]'}
 							}
 						}),
-					_1: {ctor: '[]'}
+					_1: {
+						ctor: '::',
+						_0: A2(
+							_elm_lang$html$Html$div,
+							{ctor: '[]'},
+							{
+								ctor: '::',
+								_0: _elm_lang$html$Html$text('Padding: '),
+								_1: {
+									ctor: '::',
+									_0: A2(defaultInput, _p4.padding, _user$project$Main$UpdatePadding),
+									_1: {ctor: '[]'}
+								}
+							}),
+						_1: {
+							ctor: '::',
+							_0: A2(
+								_elm_lang$html$Html$div,
+								{ctor: '[]'},
+								{
+									ctor: '::',
+									_0: _elm_lang$html$Html$text('Backcolor: '),
+									_1: {
+										ctor: '::',
+										_0: A2(defaultInput, _p4.backColor, _user$project$Main$UpdateBackColor),
+										_1: {ctor: '[]'}
+									}
+								}),
+							_1: {
+								ctor: '::',
+								_0: A2(
+									_elm_lang$html$Html$div,
+									{ctor: '[]'},
+									{
+										ctor: '::',
+										_0: _elm_lang$html$Html$text('Border: '),
+										_1: {
+											ctor: '::',
+											_0: A2(defaultInput, _p4.border, _user$project$Main$UpdateBorder),
+											_1: {ctor: '[]'}
+										}
+									}),
+								_1: {ctor: '[]'}
+							}
+						}
+					}
 				}
 			});
 	} else {
@@ -8604,6 +8715,58 @@ var _user$project$Main$droppable = function (dropNode) {
 		}
 	};
 };
+var _user$project$Main$viewDiv = F2(
+	function (model, nodeItem) {
+		var isSelected = _elm_lang$core$Native_Utils.eq(
+			_elm_lang$core$Maybe$Just(nodeItem.id),
+			model.selectedNode);
+		var isActive = _elm_lang$core$Native_Utils.eq(
+			_elm_lang$core$Maybe$Just(nodeItem),
+			model.dropNode);
+		var divStyle = {
+			ctor: '::',
+			_0: _elm_lang$html$Html_Attributes$style(
+				{
+					ctor: '::',
+					_0: {ctor: '_Tuple2', _0: 'border', _1: nodeItem.border},
+					_1: {
+						ctor: '::',
+						_0: {ctor: '_Tuple2', _0: 'padding', _1: nodeItem.padding},
+						_1: {
+							ctor: '::',
+							_0: {ctor: '_Tuple2', _0: 'color', _1: nodeItem.textColor},
+							_1: {
+								ctor: '::',
+								_0: {ctor: '_Tuple2', _0: 'text-align', _1: 'center'},
+								_1: {
+									ctor: '::',
+									_0: isActive ? {ctor: '_Tuple2', _0: 'background-color', _1: 'cyan'} : (isSelected ? {ctor: '_Tuple2', _0: 'background-color', _1: 'lightyellow'} : {ctor: '_Tuple2', _0: 'background-color', _1: nodeItem.backColor}),
+									_1: {ctor: '[]'}
+								}
+							}
+						}
+					}
+				}),
+			_1: {
+				ctor: '::',
+				_0: _elm_lang$html$Html_Events$onClick(
+					_user$project$Main$SetSelected(nodeItem)),
+				_1: {ctor: '[]'}
+			}
+		};
+		return A2(
+			_elm_lang$html$Html$div,
+			A2(
+				_elm_lang$core$Basics_ops['++'],
+				divStyle,
+				_user$project$Main$droppable(nodeItem)),
+			{
+				ctor: '::',
+				_0: _elm_lang$html$Html$text(
+					_elm_lang$core$Basics$toString(nodeItem.id)),
+				_1: {ctor: '[]'}
+			});
+	});
 var _user$project$Main$DragEnd = {ctor: 'DragEnd'};
 var _user$project$Main$DragStart = function (a) {
 	return {ctor: 'DragStart', _0: a};
@@ -8634,99 +8797,6 @@ var _user$project$Main$draggable = function (dragNode) {
 		}
 	};
 };
-var _user$project$Main$viewDiv = F2(
-	function (model, tree) {
-		var _p4 = tree;
-		if (_p4.ctor === 'Empty') {
-			return A2(
-				_elm_lang$html$Html$div,
-				{ctor: '[]'},
-				{ctor: '[]'});
-		} else {
-			var _p5 = _p4._0;
-			var isSelected = _elm_lang$core$Native_Utils.eq(
-				_elm_lang$core$Maybe$Just(_p5.id),
-				model.selectedNode);
-			var isActive = _elm_lang$core$Native_Utils.eq(
-				_elm_lang$core$Maybe$Just(_p5),
-				model.dropNode);
-			var divStyle = {
-				ctor: '::',
-				_0: _elm_lang$html$Html_Attributes$style(
-					{
-						ctor: '::',
-						_0: {ctor: '_Tuple2', _0: 'border', _1: '1px solid black'},
-						_1: {
-							ctor: '::',
-							_0: {ctor: '_Tuple2', _0: 'padding', _1: '50px'},
-							_1: {
-								ctor: '::',
-								_0: {ctor: '_Tuple2', _0: 'color', _1: _p5.textColor},
-								_1: {
-									ctor: '::',
-									_0: {ctor: '_Tuple2', _0: 'text-align', _1: 'center'},
-									_1: {
-										ctor: '::',
-										_0: isActive ? {ctor: '_Tuple2', _0: 'background-color', _1: 'cyan'} : (isSelected ? {ctor: '_Tuple2', _0: 'background-color', _1: 'lightyellow'} : {ctor: '_Tuple2', _0: '', _1: ''}),
-										_1: {ctor: '[]'}
-									}
-								}
-							}
-						}
-					}),
-				_1: {
-					ctor: '::',
-					_0: _elm_lang$html$Html_Events$onClick(
-						_user$project$Main$SetSelected(_p5)),
-					_1: {ctor: '[]'}
-				}
-			};
-			var children = isActive ? {
-				ctor: '::',
-				_0: _elm_lang$html$Html$text(
-					_elm_lang$core$Basics$toString(_p5.id)),
-				_1: {
-					ctor: '::',
-					_0: A2(
-						_elm_lang$html$Html$img,
-						{
-							ctor: '::',
-							_0: _elm_lang$html$Html_Attributes$src(_user$project$Main$url),
-							_1: {
-								ctor: '::',
-								_0: _elm_lang$html$Html_Attributes$width(100),
-								_1: _user$project$Main$draggable(_p5)
-							}
-						},
-						{ctor: '[]'}),
-					_1: {ctor: '[]'}
-				}
-			} : {
-				ctor: '::',
-				_0: _elm_lang$html$Html$text(
-					_elm_lang$core$Basics$toString(_p5.id)),
-				_1: {ctor: '[]'}
-			};
-			var newDiv = A2(
-				_elm_lang$html$Html$div,
-				A2(
-					_elm_lang$core$Basics_ops['++'],
-					divStyle,
-					_user$project$Main$droppable(_p5)),
-				children);
-			return A2(
-				_elm_lang$html$Html$div,
-				{ctor: '[]'},
-				{
-					ctor: '::',
-					_0: newDiv,
-					_1: A2(
-						_elm_lang$core$List$map,
-						_user$project$Main$viewDiv(model),
-						_p4._1)
-				});
-		}
-	});
 var _user$project$Main$view = function (model) {
 	return A2(
 		_elm_lang$html$Html$div,
@@ -8751,10 +8821,19 @@ var _user$project$Main$view = function (model) {
 				_0: _user$project$Main$viewSelectedItem(model),
 				_1: {
 					ctor: '::',
-					_0: A2(_user$project$Main$viewMiniTree, '', model.tree),
+					_0: A2(
+						_elm_lang$html$Html$div,
+						{ctor: '[]'},
+						A2(
+							_elm_lang$core$List$map,
+							_user$project$Main$viewMiniTree,
+							A2(_user$project$Tree$flattenWithDepth, 0, model.tree))),
 					_1: {
 						ctor: '::',
-						_0: A2(_user$project$Main$viewDiv, model, model.tree),
+						_0: A2(
+							_user$project$Tree$toHtml,
+							_user$project$Main$viewDiv(model),
+							model.tree),
 						_1: {ctor: '[]'}
 					}
 				}
