--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <title>Main</title>
-      <style>html,head,body { padding:0; margin:0; }
-         body { 
-			 font-family: calibri, helvetica, arial, sans-serif; 
-		 }
-      </style>
+      <link type="text/css" rel="stylesheet" href="style.css" />
+	  <script type="text/javascript" src="app.js"></script>
    </head>
    <body>
       <script type="text/javascript">Elm.Main.fullscreen()</script>
